Finalize MTI dynamic RTP port flow (per-call register/unregister) and stabilize TAP
This commit closes the MTI integration by moving from a static RTP port to a per-call dynamic UDP port range, matching the client AudioSocket expectations and enabling concurrent calls.

Key changes:
- TAP now allocates a free UDP port per MTI call from MTI_RTP_START..MTI_RTP_END.
- TAP registers (uniqueid, port) on mti-gw via HTTP /register before creating ExternalMedia.
- TAP unregisters the port via /unregister on cleanup and frees it locally.
- mti-gw runs in host network mode to listen directly on the dynamic UDP range.
- Environment and docker-compose were updated to support the dynamic port model:
  MTI_RTP_START/END, MTI_GW_HTTP_HOST/PORT, RTP_HOST_MTI host-only, and cleaned comments.
- MTI debug server flow validated:
  START frame includes Asterisk UNIQUEID, AUDIO frames are received at ~50fps,
  and END is delivered on unregister/timeout.

Result:
- No more Stasis/ExternalMedia loops.
- MTI is considered finished and ready for client-side validation.
- Project is now ready to move focus to Deepgram multi-call transcription + widget.

--- a/.env
+++ b/.env
@@ -19,17 +19,22 @@ TAP_HTTP_PORT=3200
 ##############################################
 
 # Dónde debe enviar Asterisk (ExternalMedia) el RTP de la llamada para MTI.
-# IMPORTANTE: Debe ser IP:PUERTO vistos desde Asterisk (normalmente la IP del host Docker).
-RTP_HOST_MTI=192.168.1.65:40010
+# Normalmente la IP del host Docker, ya que mti-gw debe estar en modo host por puertos dinámicos
+RTP_HOST_MTI=192.168.1.65
 
-# Puerto UDP local donde mti-gw escucha RTP
-MTI_RTP_PORT=40010
+# --- MTI dynamic RTP range (ports per call) --- Rango puertos del mti-gw, capacidad: 1k llamadas concurrentes
+MTI_RTP_START=41000
+MTI_RTP_END=41999
 
-# Servidor MTI que recibe el AudioSocket (según el PDF del cliente)
-# En la PoC puede ser una IP pública que nos den ellos, o 127.0.0.1 si pruebas con nc.
+# --- MTI GW control HTTP --- Le dice al tap-service donde informar por HTTP para vincular UNIQUEID y flujo
+# --- Normalmente la IP del host Docker, ya que mti-gw debe estar en modo host por la gestion de puertos dinámicos que hace
+MTI_GW_HTTP_HOST=192.168.1.65
+MTI_GW_HTTP_PORT=9093
+
+# Servidor MTI del cliente que recibe el flujo 'AudioSocket' (según el PDF del cliente)
+# En la PoC puede ser una IP pública que nos den ellos
 MTI_HOST=192.168.1.39
 MTI_PORT=9092
-
 
 ##############################################
 # GATEWAY DEEPGRAM (RTP -> Deepgram + Widget)
