feat(observability): Full Prometheus + Grafana integration for STT stack
Implemented complete observability layer across Deepgram-GW, TAP-Service, and MTI-GW.
Added Prometheus with persistent storage (5GB / 15 days) and Grafana with preconfigured datasource.
Introduced the 'STT Overview' dashboard plus individual dashboards for each gateway.
Extended instrumentation across all services (RTP metrics, session tracking, cleanup events, inactivity timeouts, TCP/UDP errors).
This establishes a stable monitoring baseline for upcoming Flowise integrations.

BREAKING CHANGE:
Requires Prometheus datasource named 'prometheus_ds' in Grafana.

--- a/.env
+++ b/.env
@@ -42,10 +42,15 @@ MTI_PORT=9092
 
 # Dónde debe enviar Asterisk (ExternalMedia) el RTP para tu gateway Deepgram
 # Igual que antes: IP:PUERTO vistos desde Asterisk.
-RTP_HOST_DEEPGRAM=192.168.1.65:40000
+# Deepgram RTP fijo por dirección
+RTP_HOST_DEEPGRAM_IN=192.168.1.65:40000
+RTP_HOST_DEEPGRAM_OUT=192.168.1.65:40001
 
-# Puerto UDP local donde deepgram-gw escucha RTP
-RTP_PORT=40000
+RTP_PORT_IN=40000
+RTP_PORT_OUT=40001
+
+# Límite de sesiones simultáneas deepgram (global)
+DG_MAX_SESSIONS=3
 
 # API Key Deepgram
 DEEPGRAM_API_KEY=f124d64840445b317b985de97f56d289daebbf2b
