Add JSON payload to MTI START frame (call_uuid, agent_extension, agent_username, agent_id) and update dialplan to remove extra quotes. Fixes START frame format as requested by MTI.

--- a/.env
+++ b/.env
@@ -62,9 +62,42 @@ DG_PUNCTUATE=true
 DG_SMART_FORMAT=true
 DG_DIARIZE=false
 
+# Cómo mapear dir=in / dir=out a agente/cliente
+# - CALLER_IN (por defecto): dir=in = cliente, dir=out = agente / es trafico entrante convencional, Cliente llama y desviamos a agente
+# - AGENT_IN: dir=in = agente, dir=out = cliente / es trafico saliente convencional, Agente llama a Cliente
+DG_ROLE_MODE=AGENT_IN
+
 # Puerto interno del widget web (se expone como 18080 en docker-compose)
 WIDGET_PORT=8080
 
 # Extras debug
 SWAP_ENDIAN=1      # con 1 te funcionaba en slin16
 DUMP_WAV=0        # 1 para volcar /tmp/capture.wav (~5s)
+
+
+##############################################
+# GEN-ASSISTANT (Asistencia generativa LLM)
+# - Por defecto desactivado (no cambia nada)
+##############################################
+
+# Activar/desactivar módulo de asistencia generativa
+GENERATIVE_ASSISTANT=true
+
+# Controlar si se envía STT al widget
+# - true  => se ve la transcripción (comportamiento actual)
+# - false => no se pintan mensajes STT, pero el módulo sigue recibiendo texto
+SHOW_TRANSCRIPTION=true
+
+# Motor / endpoint (por defecto N8N vía webhook)
+GEN_ASS_ENGINE=n8n
+GEN_ASS_URL=https://pericles.irontec.com/webhook/2c750cb7-ccfe-48ec-b467-2a358358206f
+GEN_ASS_AUTH=
+GEN_ASS_NAME=BOT
+
+# Intervalo entre ciclos (segundos)
+GEN_ASS_INTERVAL=10
+
+# Control de tamaño de contexto
+# - GEN_ASS_TAIL_CHARS=0 => envía siempre todo el histórico
+GEN_ASS_TAIL_CHARS=2000
+GEN_ASS_MIN_CHARS=120
