tap-service: soporta ASTERISK_HTTP_PREFIX para ARI (retrocompatible)

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@
 ARI_URL=http://192.168.1.66:8088
 ARI_USER=poctest
 ARI_PASS=Vyz5_Ses2-M6
+ASTERISK_HTTP_PREFIX=
 
 # App ARI donde entran los SnoopChannels del TAP
 TAP_APP_NAME=deitu-mti-tap
