Replace node-ari-client with native ARI REST+WS adapter (prefix-safe)
This change removes the dependency on swagger-based node-ari-client, which fails when Asterisk is served under an HTTP prefix (e.g. /asterisk in iVoz).

A lightweight ARI adapter using native ARI REST and the ARI events WebSocket was introduced, keeping the existing tap-service interface unchanged (snoopChannel, externalMedia, bridges, event handlers).

Validated end-to-end in DEV:
- Deepgram GW: bidirectional snoop + externalMedia RTP (40000/40001) with correct cleanup on hangup.
- MTI GW: dynamic RTP port reservation and real-time TCP streaming (START/END frames) with proper unregister and cleanup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - DEEPGRAM_API_KEY=${DEEPGRAM_API_KEY}
       - WIDGET_PORT=${WIDGET_PORT}
-      - RTP_PORT=${RTP_PORT}
+ #    - RTP_PORT=${RTP_PORT}
       - DG_LANGUAGE=${DG_LANGUAGE}
       - DG_INTERIM=${DG_INTERIM}
       - DG_PUNCTUATE=${DG_PUNCTUATE}
@@ -67,7 +67,7 @@ services:
       - TAP_APP_NAME=${TAP_APP_NAME}
       - TAP_HTTP_PORT=${TAP_HTTP_PORT}
       - RTP_HOST_MTI=${RTP_HOST_MTI}
-      - RTP_HOST_DEEPGRAM=${RTP_HOST_DEEPGRAM}
+    # - RTP_HOST_DEEPGRAM=${RTP_HOST_DEEPGRAM}
       - MTI_RTP_START=${MTI_RTP_START}
       - MTI_RTP_END=${MTI_RTP_END}
       - MTI_GW_HTTP_HOST=${MTI_GW_HTTP_HOST}
