MTI_HOST in env

--- a/.env
+++ b/.env
@@ -37,6 +37,10 @@ MTI_GW_HTTP_PORT=9093
 MTI_HOST=192.168.1.39
 MTI_PORT=9092
 
+# POC
+#MTI_HOST=209.38.54.252
+#MTI_PORT=9092
+
 ##############################################
 # GATEWAY DEEPGRAM (RTP -> Deepgram + Widget)
 ##############################################
