--- a/.env
+++ b/.env
@@ -41,6 +41,8 @@ MTI_PORT=9092
 #MTI_HOST=209.38.54.252
 #MTI_PORT=9092
 
+SWAP_ENDIAN=1
+
 ##############################################
 # GATEWAY DEEPGRAM (RTP -> Deepgram + Widget)
 ##############################################
